wiki frequency dictionary

--- a/wiki_names_variants.ipynb
+++ b/wiki_names_variants.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "830f5eae",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'en_Latn'}\n",
-      "{'eu_Latn', 'zh_Latn', 'mt_Latn', 'vi_Latn', 'pt_Latn', 'kk_Latn', 'lb_Latn', 'sv_Latn', 'my_Latn', 'nn_Latn', 'id_Latn', 'lt_Latn', 'uk_Latn', 'fi_Latn', 'nb_Latn', 'ru_Latn', 'en_Latn', 'tr_Latn', 'da_Latn', 'hu_Latn', 'fa_Latn', 'fr_Latn', 'ar_Latn', 'cs_Latn'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.insert(0, '/projekti/wikidata')\n",
@@ -25,64 +16,94 @@
     "import json\n",
     "import numpy as np\n",
     "from tqdm.auto import tqdm\n",
-    "from wiki_labels import qid_lab_get\n",
+    "from wiki_labels import qid_lab_get, qid_lab\n",
+    "import gzip\n",
+    "import pickle\n",
     "\n",
-    "print(qid_lab_get(177053, include_alt=True)['mr'])\n",
-    "print(qid_lab_get(191701, include_alt=True)['mba'])"
+    "#print(qid_lab_get(177053, include_alt=True)['mr'])\n",
+    "#print(qid_lab_get(191701, include_alt=True)['mba'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "98135616-8a7b-47af-8949-9bed8be368d3",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "640755 /backup/wikidata/wikiname.jsonl\n"
-     ]
-    }
-   ],
-   "source": [
-    "!wc -l /backup/wikidata/wikiname.jsonl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "b14fecbd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83c37859e9664636bc520062e646468b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/640755 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "data": {
       "text/plain": [
-       "286357"
+       "Counter()"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# dic = pickle.load(open('/projekti/mondodb/lists/wiki_freq_dict.pickle', 'rb'))\n",
+    "dic['hr_Latn_dae']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e8bd448b-664a-4a13-83a3-88bac998b1a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'wiki_id': 'per'}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "named_ent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69522b40-4482-4c8e-b154-806b26f07b28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fo = gzip.open('/projekti/mondodb/lists/wikiname.tsv.gz', 'wt')\n",
+    "for l in tqdm(gzip.open('/backup/wikidata/wikiname.jsonl.gz', 'rt'), total=854769):\n",
+    "    j = json.loads(l)\n",
+    "    wid = int(j['wiki_id'][1:])\n",
+    "    labs = qid_lab_get(wid, include_alt=True, return_alt=True)\n",
+    "    for lab, langs in labs.items():\n",
+    "        for lang in langs:\n",
+    "            lang = lang[0]\n",
+    "            if '_' in lang:\n",
+    "                lang = lang.split('_')[0]\n",
+    "            elif '-' in lang:\n",
+    "                lang = lang.split('-')[0]\n",
+    "            prov = get_provenance(lab, lang, no_countries=True)\n",
+    "            t = j['type'].replace('N.', '').lower()\n",
+    "            if prov:\n",
+    "                fo.write(f'{t}\\t{lab}\\t{prov[0]}\\n')\n",
+    "\n",
+    "    #w1, w2 = qid_lab_get(w1), qid_lab_get(w2)\n",
+    "fo.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b14fecbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pairs = Counter()\n",
-    "for l in tqdm(open('/backup/wikidata/wikiname.jsonl'), total=640755):\n",
+    "for l in tqdm(gzip.open('/backup/wikidata/wikiname.jsonl', 'rt'), total=854769):\n",
     "    j = json.loads(l)\n",
     "    sim = [int(a.replace('WIKI_Q', '').replace('Q', '')) for a in j['variants']+[j['wiki_id']] if 'P' not in a]\n",
     "    for w1, w2 in combinations(sim, 2):\n",
@@ -96,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "7ff9e7ed",
    "metadata": {},
    "outputs": [],
@@ -121,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "f452e216-2a40-4d87-a9ac-9a157908317a",
    "metadata": {},
    "outputs": [],
@@ -138,35 +159,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "92a12e9a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5846a28209ca445384241ca6ff5b6695",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1820542 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(Counter({('W.', 'tit'): 1486}), Counter({('W', 'tit'): 222}))"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "toks = defaultdict(Counter)\n",
     "for tok, v in tqdm(names.items(), total=len(names)):\n",
@@ -183,27 +179,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "b4406ec7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "({1521},\n",
-       " {'de_Latn_',\n",
-       "  'de_Latn_AT',\n",
-       "  'de_Latn_CH',\n",
-       "  'de_Latn_DE',\n",
-       "  'de_Latn_LI',\n",
-       "  'de_Latn_NL'})"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "t2set = defaultdict(set)\n",
     "prov2set = defaultdict(set)\n",
@@ -221,35 +200,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "d2589993",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c600f8261655413eb25cec3f109833d7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/8314074 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'fn0': 0, 'fn1': 0, 'fn2': 0, 'ln': 0, 'tit': 4043}"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "freqs = {}\n",
     "for k, v in tqdm(toks.items(), total=len(toks)):\n",
@@ -264,35 +218,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "4e2afcb1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28fa2c5c6e234ccc9e91382937bb0fe6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/8314074 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(20, 1263446, (1, 5.88), (16, 94.12), (4043, 100.0))"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "freqs2 = {}\n",
     "nema = Counter()\n",
@@ -319,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "566f552c",
    "metadata": {},
    "outputs": [],
@@ -333,39 +262,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "eb00b35f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading ...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "93cbde324ada4e97aea30cbb50b970e6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/44574635 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8314074\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    cur.execute('drop table mondo.wiki_name_parts purge') \n",
@@ -391,21 +291,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "8f1a45b8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(8313994,)]"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cur.execute('select count(*) from mondo.wiki_name_parts').fetchall()"
    ]
@@ -435,22 +324,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1d8471f4",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'cur' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcur\u001b[49m\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mselect m.n, t.t from mondo.name_m m, mondo.TYPEID t where t.id=m.t and m.n=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmr.\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mfetchall()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'cur' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cur.execute(\"select m.n, t.t from mondo.name_m m, mondo.TYPEID t where t.id=m.t and m.n='mr.'\").fetchall()"
    ]
@@ -472,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
